--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "@ webpack-lesson",
   "main": "index.js",
   "dependencies": {
+    "chokidar": "^2.0.4",
     "http-server": "^0.11.1",
     "schema-utils": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-rc.1",
     "@babel/preset-env": "^7.0.0-rc.1",
+    "acorn": "^6.0.2",
     "babel-loader": "^8.0.0-beta.0",
     "css-loader": "^1.0.0",
+    "enhanced-resolve": "^4.1.0",
     "file-loader": "^1.1.11",
     "imagemin": "^6.0.0",
     "imagemin-mozjpeg": "^7.0.0",
